# 16launcher_

./: .flake8  .gitignore  .pre-commit-config.yaml  16Launcher.spec  CONTRIBUTING.md  License  Makefile  README.md  ely.py  error_log.txt  installation_log.txt  installer.iss  lang_ru.ts  license.txt  main.py  push.bat  pyproject.toml  settings.json  test.py  test2.py  test3.py  test_download.py  test_installation.py  user_data.json
.github/workflows/: ci.yml  release.yml
config/: packetfixer.properties  rrp.properties
core/: cfg.py  config.py  ely.py  ely_by_skin_manager.py  ely_device.py  ely_skin_manager.py  flow.py  main.py  minecraft_news_translator.py  mod_manager.py  translator.py  util.py
core/gui/: custom_line_edit.py  main_window.py  skin_manager_dialog.py
core/gui/threads/: launch_thread.py  mod_loader_installer.py  mod_search_thread.py  popular_mods_thread.py
core/gui/widgets/: mod_loader_tab.py  modpack_tab.py  mods_tab.py  news_tab.py  settings_tab.py  splash_screen.py
data/: login.json
src/: config.py  constants.py  ely.py  ely_by_skin_manager.py  ely_device.py  ely_skin_manager.py  flow.py  mod_manager.py  translator.py  util.py
src/gui/: custom_line_edit.py  main_window.py  skin_manager_dialog.py
src/gui/threads/: launch_thread.py  mod_loader_installer.py  mod_search_thread.py  popular_mods_thread.py
src/gui/widgets/: mod_loader_tab.py  modpack_tab.py  mods_tab.py  news_tab.py  settings_tab.py  splash_screen.py
